--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,185 +1,143 @@
-<!doctype html>
-<!--[if lt IE 9]><html class="ie" lang="en"><![endif]-->
-<!--[if gte IE 9]><!--> <html lang="en"> <!--<![endif]-->
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Lucas The Nomad | {% if page.title %} {{ page.title }} {% else %} {{site.subtitle}} {% endif %}</title>
-    <meta name="description" content="description">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-    <link href="favicon.ico" rel="icon" type="image/x-icon" />
+    <title>Lucas The Nomad | {% if page.title %} {{ page.title }} {% else %} {{site.subtitle}} {% endif %}</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="/css/bootstrap.css" rel="stylesheet">
+
+    <!-- Add custom CSS here -->
+    <link href="/css/blog-post.css" rel="stylesheet">
 
     <link rel="alternate" type="application/rss+xml" title="RSS" href="{RSS}">
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="/css/luomo.style.20130120.css">
-    <link rel="stylesheet" href="/stylesheets/style.css">
-
-    <!-- jQuery -->
-    <script src="/javascript/jquery.min.js"></script>
-
-    <!-- Add jQuery helper classes to the html element -->
-    <script>$('html').removeClass('no-js').addClass('js');</script>
-
-    <!-- Declare JavaScript variables -->
-    <script>
-    //<![CDATA[
-      var disqus_shortname = "lucasthenomad";
-      var dark_post_bg           = "#494f50",
-        dark_post_text           = "#f5f5f5",
-        dark_post_accent         = "#00ccff",
-        dark_post_link           = "#00ccff",
-        dark_post_link_hover     = "#f5f5f5",
-        dark_post_link_hover_bg  = "#333333";
-      var light_post_bg          = "#afb5b6",
-        light_post_text          = "#333333",
-        light_post_accent        = "#00ccff",
-        light_post_link          = "#007A99",
-        light_post_link_hover    = "#333333",
-        light_post_link_hover_bg = "#f5f5f5";
-
-    //]]>
-    </script>
-
-    <!-- HTML5 Shiv -->
-    <!--[if lt IE 9]>
-      <script src="/javascript/html5shiv.js"></script>
-      <link rel="stylesheet" href="/css/luomo.ie.20121210.css">
-    <![endif]-->
-
-    <!-- Custom Font Families -->
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700|Open+Sans:700,700italic|Open+Sans:300|Open+Sans:300,300italic" rel="stylesheet" type="text/css">
   </head>
 
-  <body id="top" class="{% if page.homepage %}is_index_page{% else %}is_permalink_page{% endif %}">
+  <body>
 
-    <div id="blog_wrapper">
-      <header id="blog_header">
-        <div class="inner">
-
-          <div id="blog_header_top">
-            <div id="title_link">
-              <a href="/">
-                <h1 class="page_title">Lucas The Nomad</h1>
-              </a>
-            </div><!-- /#title_link -->
-
-            <div id="social_links">
-              <ul>
-                <li class="facebook"><a href="http://facebook.com/lucas.parry" title="Facebook" target="_blank">facebook</a></li>
-                <li class="flickr"><a href="http://www.flickr.com/photos/83213379@N00/" title="Flickr" target="_blank">flickr</a></li>
-                <li class="instagram"><a href="http://instagram.com/lparry" title="Instagram" target="_blank">instagram</a></li>
-                <li class="twitter"><a href="http://twitter.com/lucas_parry" title="Twitter" target="_blank">twitter</a></li>
-              </ul>
-            </div>
-          </div><!-- /#social_links -->
-
-
-        </div><!-- /.inner -->
-      </header><!-- /#blog_header -->
-
-      {{ content }}
-
-      <!-- START FOOTER -->
-
-      <footer class="blog_footer clearfix">
-
-        <div class="inner">
-            <div class="footer_column">
-                  <section class="widget widget_about clearfix">
-                    <h4 class="widget_heading">About Lucas</h4>
-                    <figure class="profile_portrait">
-                      <img src="/images/beardy.jpg" alt="portrait">
-                    </figure>
-                    <p>The story of an irresponsible thirty year old man-child who decided he didn't want to wait until he was old to have a turn at enjoying retirement.</p>
-                    <p>Instead of following the common life path of getting married, buying a house, and having two kids, he's chosen to seek out epic adventures, see the world, and hopefully have great times that he'll reminisce about when he's old and senile.</p>
-                    <div class="clearfix"></div>
-                  </section><!-- /.widget_about -->
-
-
-                <!-- <section class="widget widget_flickr"> -->
-                <!--   <h4 class="widget_heading">Flickr</h4> -->
-                <!--   <ul class="image_feed flickr_feed clearfix" data-id="83213379@N00" data-count="16"> -->
-                <!--   </ul> -->
-                <!-- </section> -->
-
-                <section class="widget widget_navi clearfix">
-                  <h4 class="widget_heading">Navigate</h4>
-                  <ul class="links">
-                    <li><a href="/atom.xml" class="rss">RSS</a></li>
-                    <li><a href="/archive" class="archive">archive</a></li>
-                  </ul>
-                  <div class="clearfix"></div>
-                </section><!-- /.widget_navi -->
-            </div><!-- /.footer_column -->
-
+    <nav class="navbar navbar navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.php">Lucas The Nomad</a>
         </div>
 
-      </footer><!-- /.blog_footer -->
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="#about">Facebook</a></li>
+            <li><a href="#contact">Twitter</a></li>
+            <li><a href="#contact">Couchsurfing</a></li>
+            <li><a href="#contact">Flickr</a></li>
+            <li><a href="#contact">Instagram</a></li>
+          </ul>
+        </div>
+      </div><!-- /.container -->
+    </nav>
 
-      <div id="back_to_top">
-        <a href="#top">Back to Top</a>
-      </div><!-- /.back_to_top -->
+    <div class="container">
 
-    </div><!-- /#blog_wrapper -->
+      <div class="row">
+        <div class="col-lg-8">
+        
+          {{ content }}
+          <!-- <!-- the actual blog post: title/author/date/content --> -->
+          <!-- <h1>Istanbul, Turkey</h1> -->
+          <!-- <hr> -->
+          <!-- <p><span class="glyphicon glyphicon-time"></span> Posted on August 24, 2013 at 9:00 PM</p> -->
+          <!-- <hr> -->
+          <!-- <img src="http://placehold.it/900x300" class="img-responsive"> -->
+          <!-- <hr> -->
+          <!-- <p class="lead">Science cuts two ways, of course; its products can be used for both good and evil. But there's no turning back from science. The early warnings about technological dangers also come from science.</p> -->
+          <!-- <p>You know, being a test pilot isn't always the healthiest business in the world.</p> -->
+          <!-- <p>Cookie jelly beans soufflé icing. Gummi bears tootsie roll powder chupa chups cheesecake chocolate jelly-o lollipop lollipop. Halvah applicake chupa chups. Marshmallow chocolate jujubes icing lollipop gummi bears chupa chups pudding bonbon. Jelly beans jelly soufflé jujubes. Sesame snaps lollipop icing donut lemon drops soufflé.</p> -->
+          <!-- <p>Donut caramels gingerbread. Sweet roll macaroon pastry cotton candy oat cake sesame snaps biscuit lemon drops dessert. Candy canes carrot cake danish carrot cake soufflé jelly chocolate cake muffin. Topping brownie donut. Oat cake marzipan dragée cheesecake. Donut chocolate cake jujubes tart dragée toffee.</p> -->
+          <!-- <p>Tilefish electric knifefish salmon shark southern Dolly Varden. Pacific argentine tope golden shiner ilisha barreleye loosejaw catla, dogteeth tetra catfish tenpounder nase scup Ragfish brotula." Codlet brook lamprey pleco, Japanese eel convict cichlid titan triggerfish, plownose chimaera topminnow Black scalyfin. Walleye pollock, blue shark Sacramento blackfish prickleback airbreathing catfish yellowfin cutthroat trout, goby southern sandfish. North Pacific daggertooth dorab cepalin weever flying gurnard.</p> -->
 
-    <!-- Fix Spotify Audio Embeds -->
-    <script type="text/javascript">
-      (function($) {
-        $('.spotify_audio_player').closest('article').addClass('is_spotify_embed');
-      }(this.jQuery));
-    </script>
-
-    <!-- Disqus Comment Count -->
-    <script type="text/javascript">
-    //<![CDATA[
-    (function() {
-      var links = document.getElementsByTagName('a');
-      var query = '?';
-      for(var i = 0; i < links.length; i++) {
-        if(links[i].href.indexOf('#disqus_thread') >= 0) {
-          query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&';
-        }
-      }
-      document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/lucasthenomad/get_num_replies.js' + query + '"></' + 'script>');
-    })();
-    //]]>
-    </script>
-
-<script type="text/javascript">
-    //<![CDATA[
-    // remove .dark from posts so the lumo JS can put the final colours on posts
-    $(".post").each(function () {
-        var post = $(this);
-            post.removeClass("dark");
-            }
-        );
-
-    //]]>
-    </script>
-
-    <!-- Theme JavaScript Files -->
-    <script src="/javascript/luomo.plugins.js"></script>
-    <script src="/javascript/luomo.scripts.20130126.min.js"></script>
+          <!-- <hr> -->
 
 
-    <!-- fittext the page title -->
-    <script src="/javascript/jquery.fittext.js"></script>
-    <script type="text/javascript">
-      //<![CDATA[
-    $("#title_link h1").fitText();
-    //]]>
-    </script>
+        </div>
+        
+        <div class="col-lg-4">
+          <!-- <div class="well"> -->
+          <!--   <h4>Blog Search</h4> -->
+          <!--   <div class="input-group"> -->
+          <!--     <input type="text" class="form-control"> -->
+          <!--     <span class="input-group-btn"> -->
+          <!--       <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button> -->
+          <!--     </span> -->
+          <!--   </div> -->
+          <!-- </div> -->
+          <div class="well">
+            <h4>Navigate</h4>
+            <ul class="list-unstyled">
+              <li><a href="#dinosaurs">Archive</a></li>
+              <li><a href="#spaceships">RSS</a></li>
+            </ul>
+          </div>
 
-    <script type="text/javascript">
-    //<![CDATA[
-      var _gaq=[['_setAccount','UA-8216018-4'],['_trackPageview']];
-        (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-        g.src='https://ssl.google-analytics.com/ga.js';
-        s.parentNode.insertBefore(g,s)}(document,'script'));
-    //]]>
-    </script>
+
+          <div class="well">
+            <h4>Tags</h4>
+              <div class="row">
+                <div class="col-lg-6">
+                  <ul class="list-unstyled">
+                    <li><a href="#dinosaurs">Dinosaurs</a></li>
+                    <li><a href="#spaceships">Spaceships</a></li>
+                    <li><a href="#fried-foods">Fried Foods</a></li>
+                    <li><a href="#wild-animals">Wild Animals</a></li>
+                  </ul>
+                </div>
+                <div class="col-lg-6">
+                  <ul class="list-unstyled">
+                    <li><a href="#alien-abductions">Alien Abductions</a></li>
+                    <li><a href="#business-casual">Business Casual</a></li>
+                    <li><a href="#robots">Robots</a></li>
+                    <li><a href="#fireworks">Fireworks</a></li>
+                  </ul>
+                </div>
+              </div>
+          </div>
+          <div class="well">
+            <h4>About Lucas</h4>
+            <p>The story of an irresponsible thirty year old man-child
+              who decided he didn't want to wait until he was old to have
+              a turn at enjoying retirement.</p>
+
+            <p>Instead of following the common life path of getting
+              married, buying a house, and having two kids, he's chosen
+              to seek out epic adventures, see the world, and hopefully
+              have great times that he'll reminisce about when he's old
+              and senile.</p>
+          </div>
+        </div>
+      </div>
+      
+      <hr>
+      
+      <!-- <footer> -->
+      <!--   <div class="row"> -->
+      <!--     <div class="col-lg-12"> -->
+      <!--     </div> -->
+      <!--   </div> -->
+      <!-- </footer> -->
+
+    </div><!-- /.container -->
+
+    <!-- JavaScript -->
+    <script src="/js/jquery-1.10.2.js"></script>
+    <script src="/js/bootstrap.js"></script>
 
   </body>
 </html>
