--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -29,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.php">Lucas The Nomad</a>
+          <a class="navbar-brand" href="/">Lucas The Nomad</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -49,26 +49,11 @@
 
       <div class="row">
         <div class="col-lg-8">
-        
+
           {{ content }}
-          <!-- <!-- the actual blog post: title/author/date/content --> -->
-          <!-- <h1>Istanbul, Turkey</h1> -->
-          <!-- <hr> -->
-          <!-- <p><span class="glyphicon glyphicon-time"></span> Posted on August 24, 2013 at 9:00 PM</p> -->
-          <!-- <hr> -->
-          <!-- <img src="http://placehold.it/900x300" class="img-responsive"> -->
-          <!-- <hr> -->
-          <!-- <p class="lead">Science cuts two ways, of course; its products can be used for both good and evil. But there's no turning back from science. The early warnings about technological dangers also come from science.</p> -->
-          <!-- <p>You know, being a test pilot isn't always the healthiest business in the world.</p> -->
-          <!-- <p>Cookie jelly beans soufflé icing. Gummi bears tootsie roll powder chupa chups cheesecake chocolate jelly-o lollipop lollipop. Halvah applicake chupa chups. Marshmallow chocolate jujubes icing lollipop gummi bears chupa chups pudding bonbon. Jelly beans jelly soufflé jujubes. Sesame snaps lollipop icing donut lemon drops soufflé.</p> -->
-          <!-- <p>Donut caramels gingerbread. Sweet roll macaroon pastry cotton candy oat cake sesame snaps biscuit lemon drops dessert. Candy canes carrot cake danish carrot cake soufflé jelly chocolate cake muffin. Topping brownie donut. Oat cake marzipan dragée cheesecake. Donut chocolate cake jujubes tart dragée toffee.</p> -->
-          <!-- <p>Tilefish electric knifefish salmon shark southern Dolly Varden. Pacific argentine tope golden shiner ilisha barreleye loosejaw catla, dogteeth tetra catfish tenpounder nase scup Ragfish brotula." Codlet brook lamprey pleco, Japanese eel convict cichlid titan triggerfish, plownose chimaera topminnow Black scalyfin. Walleye pollock, blue shark Sacramento blackfish prickleback airbreathing catfish yellowfin cutthroat trout, goby southern sandfish. North Pacific daggertooth dorab cepalin weever flying gurnard.</p> -->
-
-          <!-- <hr> -->
-
 
         </div>
-        
+
         <div class="col-lg-4">
           <!-- <div class="well"> -->
           <!--   <h4>Blog Search</h4> -->
