--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -14,7 +14,7 @@
     <!-- Add custom CSS here -->
     <link href="/css/blog-post.css" rel="stylesheet">
 
-    <link rel="alternate" type="application/rss+xml" title="RSS" href="{RSS}">
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
   </head>
 
@@ -35,10 +35,10 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#about">Facebook</a></li>
-            <li><a href="#contact">Twitter</a></li>
+            <li><a href="https://www.facebook.com/lucasparry">Facebook</a></li>
+            <li><a href="https://www.twitter.com/lucas_parry">Twitter</a></li>
             <li><a href="#contact">Couchsurfing</a></li>
-            <li><a href="#contact">Flickr</a></li>
+            <li><a href="https://www.flickr.com/photos/83213379@N00/">Flickr</a></li>
             <li><a href="#contact">Instagram</a></li>
           </ul>
         </div>
@@ -65,15 +65,6 @@
           <!--   </div> -->
           <!-- </div> -->
           <div class="well">
-            <h4>Navigate</h4>
-            <ul class="list-unstyled">
-              <li><a href="#dinosaurs">Archive</a></li>
-              <li><a href="#spaceships">RSS</a></li>
-            </ul>
-          </div>
-
-
-          <div class="well">
             <h4>Tags</h4>
               <div class="row">
                 <div class="col-lg-6">
@@ -95,17 +86,28 @@
               </div>
           </div>
           <div class="well">
+            <img src="/images/beardy.jpg" class="avatar" width="125px">
             <h4>About Lucas</h4>
-            <p>The story of an irresponsible thirty year old man-child
+            <p class="blurb">The story of an irresponsible thirty year old man-child
               who decided he didn't want to wait until he was old to have
               a turn at enjoying retirement.</p>
 
-            <p>Instead of following the common life path of getting
+            <p class="blurb">Instead of following the common life path of getting
               married, buying a house, and having two kids, he's chosen
               to seek out epic adventures, see the world, and hopefully
               have great times that he'll reminisce about when he's old
               and senile.</p>
           </div>
+
+          <div class="well">
+            <h4>Navigate</h4>
+            <ul class="list-unstyled">
+              <li><a href="/archive" class="archive">Archive</a></li>
+              <li><a href="/atom.xml" class="rss">RSS</a></li>
+            </ul>
+          </div>
+
+
         </div>
       </div>
       
