--- a/source/_includes/_post_excerpt.html
+++ b/source/_includes/_post_excerpt.html
@@ -1,6 +1,7 @@
 <article>
   <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-  <p><span class="glyphicon glyphicon-time"></span> Posted on August 24, 2013 at 9:00 PM</p>
+  <p><span class="glyphicon glyphicon-time"></span> Posted on {{ post.date |date_to_long_string }} </p>
+    </a>
   <hr>
   {{ content | excerpt }}
 
