--- a/source/_includes/_post_excerpt.html
+++ b/source/_includes/_post_excerpt.html
@@ -1,6 +1,6 @@
 <article>
   <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-  <p><span class="glyphicon glyphicon-time"></span> Posted on {{ post.date |date_to_long_string }} </p>
+  <p><span class="glyphicon glyphicon-time"></span>Posted on {{ post.date |date_to_long_string }}</p>
     </a>
   <hr>
   {{ content | excerpt }}
@@ -8,5 +8,14 @@
   {% if content | has_excerpt %}
   <p class="excerpt-link"><a href="{{ post.url }}">Read more&hellip;</a></p>
   {% endif %}
+
+<footer class="post_footer">
+  <p><span class="glyphicon glyphicon-tags"></span>Tags</p>
+  <ul class="tags">
+    {% for tag in post.tags %}
+    <li><a href="/tag/{{ tag }}">{{ tag }}</a></li>
+    {% endfor %}
+  </ul>
+</footer><!-- /.post_footer -->
   <hr>
 </article><!-- /.post -->
