--- a/source/_includes/_post_excerpt.html
+++ b/source/_includes/_post_excerpt.html
@@ -1,8 +1,8 @@
 <article>
   <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-  <p><span class="glyphicon glyphicon-time"></span>Posted on {{ post.date |date_to_long_string }}</p>
+  <p><span class="glyphicon glyphicon-time"></span>Posted on {{ post.date | date_to_long_string }}</p>
     </a>
-  <hr>
+  <br>
   {{ content | excerpt }}
 
   {% if content | has_excerpt %}
@@ -10,12 +10,14 @@
   {% endif %}
 
 <footer class="post_footer">
+  {% if post.tags | has_tags %}
   <p><span class="glyphicon glyphicon-tags"></span>Tags</p>
   <ul class="tags">
     {% for tag in post.tags %}
     <li><a href="/tag/{{ tag }}">{{ tag }}</a></li>
     {% endfor %}
   </ul>
+  {% endif %}
 </footer><!-- /.post_footer -->
   <hr>
 </article><!-- /.post -->
