--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Lucas The Nomad">
+    <meta name="author" content="Lucas Parry">
 
     <title>Lucas The Nomad | {% if page.title %} {{ page.title }} {% else %} {{site.subtitle}} {% endif %}</title>
 
@@ -20,7 +20,7 @@
 
   <body>
 
-    <nav class="navbar navbar navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -66,23 +66,12 @@
           <!-- </div> -->
           <div class="well">
             <h4>Tags</h4>
-              <div class="row">
-                <div class="col-lg-6">
-                  <ul class="list-unstyled">
-                    <li><a href="#dinosaurs">Dinosaurs</a></li>
-                    <li><a href="#spaceships">Spaceships</a></li>
-                    <li><a href="#fried-foods">Fried Foods</a></li>
-                    <li><a href="#wild-animals">Wild Animals</a></li>
+             <div class="row">
+                  <ul class="tags">
+                    {% for tag in site.tags %}
+                    <li><a class="tag-invert" href="/tag/{{ tag | first }}">{{ tag | first }}</a></li>
+                    {% endfor %}
                   </ul>
-                </div>
-                <div class="col-lg-6">
-                  <ul class="list-unstyled">
-                    <li><a href="#alien-abductions">Alien Abductions</a></li>
-                    <li><a href="#business-casual">Business Casual</a></li>
-                    <li><a href="#robots">Robots</a></li>
-                    <li><a href="#fireworks">Fireworks</a></li>
-                  </ul>
-                </div>
               </div>
           </div>
           <div class="well">
