--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -12,7 +12,7 @@
     <link href="/css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="/css/blog-post.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
 
     <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
