--- a/source/_includes/_post.html
+++ b/source/_includes/_post.html
@@ -1,15 +1,23 @@
 <article>
   <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-  <p><span class="glyphicon glyphicon-time"></span> Posted on {{ post.date |date_to_long_string }} </p>
-  <hr>
-
+  <p><span class="glyphicon glyphicon-time"></span>Posted on {{ post.date | date_to_long_string }}</p>
+    </a>
+  <br>
   {{ content }}
 
+<footer class="post_footer">
+  {% if post.tags | has_tags %}
+  <p><span class="glyphicon glyphicon-tags"></span>Tags</p>
+  <ul class="tags">
+    {% for tag in post.tags %}
+    <li><a href="/tag/{{ tag }}">{{ tag }}</a></li>
+    {% endfor %}
+  </ul>
+  {% endif %}
+</footer><!-- /.post_footer -->
   <hr>
 
   <div id="disqus_thread"></div>
   <script type="text/javascript" src="http://lucasthenomad.disqus.com/embed.js"></script>
   <noscript><a href="http://lucasthenomad.disqus.com/?url=ref">View the discussion thread.</a></noscript>
-
-
 </article><!-- /.post -->
