--- a/sass/style.scss
+++ b/sass/style.scss
@@ -61,6 +61,11 @@ footer {
  .tags {
    padding-left: 10px;
    padding-right: 10px;
+   a {
+     font-size: 10px;
+     padding: 3px 7px;
+     font-weight: bold;
+   }
  }
 }
 
