--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -37,9 +37,9 @@
           <ul class="nav navbar-nav">
             <li><a href="https://www.facebook.com/lucasparry">Facebook</a></li>
             <li><a href="https://www.twitter.com/lucas_parry">Twitter</a></li>
-            <li><a href="#contact">Couchsurfing</a></li>
+            <li><a href="https://www.couchsurfing.org/people/lucasthenomad/">Couchsurfing</a></li>
             <li><a href="https://www.flickr.com/photos/83213379@N00/">Flickr</a></li>
-            <li><a href="#contact">Instagram</a></li>
+            <li><a href="http://instagram.com/lparry">Instagram</a></li>
           </ul>
         </div>
       </div><!-- /.container -->
