--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -65,7 +65,7 @@
           <!--   </div> -->
           <!-- </div> -->
           <div class="well">
-            <h4>Tags</h4>
+<h4><span class="glyphicon glyphicon-tags"></span>Tags</h4>
              <div class="row">
                   <ul class="tags">
                     {% for tag in site.tags %}
