Use font-awesome

--- a/source/_includes/_post.html
+++ b/source/_includes/_post.html
@@ -1,6 +1,6 @@
 <article>
   <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-  <p><span class="glyphicon glyphicon-time"></span>Posted on {{ post.date | date_to_long_string }}</p>
+  <p><i class="fa fa-clock-o"></i> Posted on {{ post.date | date_to_long_string }}</p>
     </a>
   <br>
   {{ content }}
