--- a/source/_includes/_tags.html
+++ b/source/_includes/_tags.html
@@ -1,4 +1,4 @@
-<p><span class="glyphicon glyphicon-tags"></span>Tags</p>
+<p><i class="fa fa-tags fa-lg"></i> Tags</p>
 <ul class="tags">
   {% for tag in post.tags %}
   <li><a href="/tag/{{ tag }}">{{ tag }}</a></li>
