--- a/sass/bootstrap.scss
+++ b/sass/bootstrap.scss
@@ -1,5 +1,8 @@
 /*! normalize.css v2.1.3 | MIT License | git.io/normalize */
 
+
+$nav-min-width:            1000px;
+
 article,
 aside,
 details,
@@ -3746,7 +3749,7 @@ input[type="button"].btn-block {
   margin-bottom: 1px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $nav-min-width) {
   .navbar-right .dropdown-menu {
     right: 0;
     left: auto;
@@ -4387,7 +4390,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   left: auto;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $nav-min-width) {
   .nav-tabs.nav-justified > li {
     display: table-cell;
     width: 1%;
@@ -4408,7 +4411,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   border: 1px solid #1c1e22;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $nav-min-width) {
   .nav-tabs.nav-justified > li > a {
     border-bottom: 1px solid #1c1e22;
     border-radius: 4px 4px 0 0;
@@ -4466,7 +4469,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   left: auto;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $nav-min-width) {
   .nav-justified > li {
     display: table-cell;
     width: 1%;
@@ -4491,7 +4494,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   border: 1px solid #1c1e22;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $nav-min-width) {
   .nav-tabs-justified > li > a {
     border-bottom: 1px solid #1c1e22;
     border-radius: 4px 4px 0 0;
@@ -4574,7 +4577,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   clear: both;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $nav-min-width) {
   .navbar {
     border-radius: 4px;
   }
@@ -4630,7 +4633,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   clear: both;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $nav-min-width) {
   .navbar-header {
     float: left;
   }
@@ -4700,7 +4703,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   overflow-y: auto;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $nav-min-width) {
   .navbar-collapse {
     width: auto;
     border-top: 0;
@@ -4729,7 +4732,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   margin-left: -15px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $nav-min-width) {
   .container > .navbar-header,
   .container > .navbar-collapse {
     margin-right: 0;
@@ -4742,7 +4745,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   border-width: 0 0 1px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $nav-min-width) {
   .navbar-static-top {
     border-radius: 0;
   }
@@ -4756,7 +4759,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   z-index: 1030;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $nav-min-width) {
   .navbar-fixed-top,
   .navbar-fixed-bottom {
     border-radius: 0;
@@ -4786,7 +4789,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   text-decoration: none;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $nav-min-width) {
   .navbar > .container .navbar-brand {
     margin-left: -15px;
   }
@@ -4816,7 +4819,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   margin-top: 4px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $nav-min-width) {
   .navbar-toggle {
     display: none;
   }
@@ -4855,7 +4858,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $nav-min-width) {
   .navbar-nav {
     float: left;
     margin: 0;
@@ -4872,7 +4875,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $nav-min-width) {
   .navbar-left {
     float: left !important;
   }
@@ -4893,7 +4896,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
           box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
 }
 
-@media (min-width: 768px) {
+@media (min-width: $nav-min-width) {
   .navbar-form .form-group {
     display: inline-block;
     margin-bottom: 0;
@@ -4925,7 +4928,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $nav-min-width) {
   .navbar-form {
     width: auto;
     padding-top: 0;
@@ -4978,7 +4981,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   margin-bottom: 15px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $nav-min-width) {
   .navbar-text {
     float: left;
     margin-right: 15px;
