Use the one tag partial everywhere

--- a/source/_includes/_tags.html
+++ b/source/_includes/_tags.html
@@ -1,6 +1,6 @@
-<p><i class="fa fa-tags fa-lg"></i> Tags</p>
+<h4><i class="fa fa-tags fa-lg"></i> Tags</h4>
 <ul class="tags">
-  {% for tag in post.tags %}
+  {% for tag in tags %}
   <li><a href="/tag/{{ tag }}">{{ tag }}</a></li>
   {% endfor %}
 </ul>
