--- a/source/_includes/_post.html
+++ b/source/_includes/_post.html
@@ -7,6 +7,7 @@
 
 <footer class="post_footer">
   {% if post.tags | has_tags %}
+  {% assign tags = post.tags %}
   {% include _tags.html %}
   {% endif %}
 </footer><!-- /.post_footer -->
