--- a/source/_includes/_post_excerpt.html
+++ b/source/_includes/_post_excerpt.html
@@ -11,6 +11,7 @@
 
 <footer class="post_footer">
   {% if post.tags | has_tags %}
+  {% assign tags = post.tags %}
   {% include _tags.html %}
   {% endif %}
 </footer><!-- /.post_footer -->
