one less request per page load

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -8,11 +8,8 @@
 
     <title>Lucas The Nomad | {% if page.title %} {{ page.title }} {% else %} {{site.subtitle}} {% endif %}</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="/css/css.css" rel="stylesheet">
 
-    <!-- Add custom CSS here -->
-    <link href="/css/style.css" rel="stylesheet">
     <link href="/css/font-awesome/font-awesome.css" rel="stylesheet">
 
     <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
