--- a/source/_includes/_tags.html
+++ b/source/_includes/_tags.html
@@ -1,4 +1,4 @@
-<h4><i class="fa fa-tags fa-lg"></i> Tags</h4>
+<h4><i class="fa fa-tags fa-lg fa-fw"></i> Tags</h4>
 <ul class="tags">
   {% for tag in tags %}
   <li><a href="/tag/{{ tag }}">{{ tag }}</a></li>
