--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -37,7 +37,7 @@
             <li><a href="https://www.twitter.com/lucas_parry"><i class="fa fa-twitter-square fa-lg fa-fw"></i> Twitter</a></li>
             <li><a href="https://www.flickr.com/photos/83213379@N00/"><i class="fa fa-flickr fa-lg fa-fw"></i> Flickr</a></li>
             <li><a href="https://instagram.com/lparry"><i class="fa fa-instagram fa-lg fa-fw"></i> Instagram</a></li>
-            <li><a href="https://www.couchsurfing.org/people/lucasthenomad/">Couchsurfing</a></li>
+            <li><a href="https://www.couchsurfing.org/people/lucasthenomad/"><i class="fa fa-suitcase fa-lg fa-fw"></i> Couchsurfing</a></li>
           </ul>
         </div>
       </div><!-- /.container -->
@@ -59,7 +59,7 @@
           </div>
           <div class="well">
             <img src="/images/beardy.jpg" class="avatar" width="125px">
-            <h4><i class="fa fa-user fa-lg"></i> About Lucas</h4>
+            <h4><i class="fa fa-info-circle fa-lg fa-fw"></i> About Lucas</h4>
             <p class="blurb">The story of an irresponsible thirty year old man-child
               who decided he didn't want to wait until he was old to have
               a turn at enjoying retirement.</p>
@@ -72,7 +72,7 @@
           </div>
 
           <div class="well">
-            <h4><i class="fa fa-search fa-lg"></i> Navigate</h4>
+            <h4><i class="fa fa-search fa-lg fa-fw"></i> Navigate</h4>
             <ul>
               <li><a href="/archive" class="archive">Archive</a></li>
               <li><a href="/atom.xml" class="rss">RSS</a></li>
