No special template for quotes
I've only used quotes once, so there's no point maintaining a separate
template for it.

--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -106,3 +106,28 @@ ul.tags {
 
   }
 }
+
+.quote {
+  font-size: x-large;
+  font-weight: lighter;
+}
+.quote:before {
+  content: "\f10d  ";
+  font-family: FontAwesome;
+}
+
+.quote:after {
+  content: " \f10e";
+  font-family: FontAwesome;
+}
+
+.quote-attribution {
+  font-size: large;
+  font-weight: lighter;
+  text-align: right;
+  padding-right: 50px;
+}
+
+.quote-attribution:before {
+  content: "– "
+}
