Sync blog content with tumblr dump
Thank tumblr for making that harder than it needed to be. I really
appreciate you re-ordering the properties in my img tags for NO FUCKING
REASON so every shows up as a difference I need to inspect.

--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -131,3 +131,9 @@ ul.tags {
 .quote-attribution:before {
   content: "– "
 }
+
+.excerpt {
+  font-weight: lighter;
+  margin-left: 20px;
+  font-size: larger;
+}
