tweak facebook og tags

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -6,10 +6,10 @@
     <meta name="description" content="{{ site.title }}">
     <meta name="author" content="Lucas Parry">
 
-    <meta property="og:site_name" content="{{ site.title }}" />
+    <meta property="og:site_name" content="www.lucasthenomad.com" />
     <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
     <meta property="og:title" content="{{ page.title}}{% if page.title %} {{ page.title }} {% else %} {{site.subtitle}} {% endif %}" />
-    <meta property="og:description" content="{{ page.content | strip_html | strip_newlines| truncate: 300 }}" />
+    <meta property="og:description" content="{{ page.content | strip_html | truncate: 300 }}" />
     <meta property="og:determiner" content="a" />
     <meta property="og:type" content="blog" />
 
