--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -8,7 +8,7 @@
 
     <meta property="og:site_name" content="www.lucasthenomad.com" />
     <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
-    <meta property="og:title" content="{{ page.title}}{% if page.title %} {{ page.title }} {% else %} {{site.subtitle}} {% endif %}" />
+    <meta property="og:title" content="{% if page.title %} {{ page.title }} {% else %} {{site.subtitle}} {% endif %}" />
     <meta property="og:description" content="{{ page.content | strip_html | truncate: 300 }}" />
     <meta property="og:determiner" content="a" />
     <meta property="og:type" content="blog" />
