stop cluttering up disqus with localhost addresses

--- a/source/_includes/_disqus_comments.html
+++ b/source/_includes/_disqus_comments.html
@@ -1,6 +1,6 @@
 <div id="disqus_thread"></div>
 <script type="text/javascript">
-    var disqus_shortname = 'lucasthenomad';
+    var disqus_shortname = 'lucasthenomad{{"" | octopress_env}}';
     var disqus_url = '{{ site.url }}{{ post.url }}';
 
     (function() {
