pad this a little

--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -26,6 +26,7 @@ footer {
 .pagination {
   width: 100%;
   font-size: 20px;
+  padding-bottom: 20px;
 
   .page-previous {
     position: absolute;
