--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -69,7 +69,7 @@
           <div class="well">
             <img src="/images/avatar.jpg" class="avatar" width="125px">
             <h4><i class="fa fa-info-circle fa-lg fa-fw"></i> About Lucas</h4>
-            <p class="blurb">The story of an irresponsible thirty year old man-child
+            <p class="blurb">The story of an irresponsible thirty-one year old man-child
               who decided he didn't want to wait until he was old to have
               a turn at enjoying retirement.</p>
 
