--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -69,15 +69,12 @@
           <div class="well">
             <img src="/images/avatar.jpg" class="avatar" width="125px">
             <h4><i class="fa fa-info-circle fa-lg fa-fw"></i> About Lucas</h4>
-            <p class="blurb">The story of an irresponsible thirty-one year old man-child
-              who decided he didn't want to wait until he was old to have
-              a turn at enjoying retirement.</p>
+            <p class="blurb">An account of Lucas' epic travels, exciting
+            adventures, challenging misfortunes and lucky breaks. They rarely
+            happen with to any real plan, but generally these kinds of things
+            just take care of themselves and I just enjoy the ride.</p>
 
-            <p class="blurb">Instead of following the common life path of getting
-              married, buying a house, and having two kids, he's chosen
-              to seek out epic adventures, see the world, and hopefully
-              have great times that he'll reminisce about when he's old
-              and senile.</p>
+            <p class="blurb">I try to post something to this blog at least once a month (I'm trying to get better), and it tends to run several months behind real-time.</p>
           </div>
 
           <div class="well">
