--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -1,6 +1,7 @@
 
 $tag-color:            white;
 $tag-background-color: #1c1e22;
+$photo-padding: 6px;
 
 footer {
   margin: 50px 0;
@@ -10,17 +11,17 @@ footer {
   text-align: center;
 
   // centered Polaroid-like look
-  padding: 5px;
+  padding: $photo-padding;
   background: white;
   display: table;
   margin-right: auto;
   margin-left: auto;
-  box-shadow:         5px 5px 2px 0px #222;
+  box-shadow:         $photo-padding $photo-padding $photo-padding 0px #111;
   border-radius: 2px;
 
   a img {
     display: inline;
-    margin-bottom: 5px
+    margin-bottom: $photo-padding;
   }
 
   em {
