--- a/sass/css.scss
+++ b/sass/css.scss
@@ -1,5 +1,7 @@
 @import "bootstrap";
 @import "style";
+@import url(http://fonts.googleapis.com/css?family=Swanky+and+Moo+Moo);
+
 
 .videowrapper {
     float: none;
