--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -29,6 +29,9 @@ footer {
     font-family: 'Swanky and Moo Moo', cursive;
     font-size: 24px;
   }
+  a:hover {
+    text-decoration: none;
+  }
 
 }
 
