--- a/sass/css.scss
+++ b/sass/css.scss
@@ -1,7 +1,7 @@
 @import "bootstrap";
 @import "style";
 @import url(http://fonts.googleapis.com/css?family=Swanky+and+Moo+Moo);
-
+@import url(http://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,700,700italic);
 
 .videowrapper {
     float: none;
