--- a/source/_includes/_post_excerpt.html
+++ b/source/_includes/_post_excerpt.html
@@ -1,6 +1,6 @@
 <article>
   <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-  <p><i class="fa fa-clock-o"></i>&nbsp;Posted on {{ post.date | date_to_long_string }}</p>
+  <p class="timestamp"><i class="fa fa-clock-o"></i>&nbsp;Posted on {{ post.date | date_to_long_string }}</p>
   <br>
   {{ content | excerpt | rewrite_flickr_urls: post.url}}
 
