Preview using local copy of GWF fonts
TODO: work out environment based conditionals in
SASS so that I can get rid of these nasty Jekyll
helpers

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -17,6 +17,8 @@
 
 
     <link href="{{ "" | fontawesome_url_for_environment }}" rel="stylesheet">
+    <link href="{{ "" | lato_url_for_environment }}" rel="stylesheet">
+    <link href="{{ "" | swanky_and_moo_moo_url_for_environment }}" rel="stylesheet">
     <link href="/css/css.css" rel="stylesheet">
 
     <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
