Google told me to do it

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -65,7 +65,7 @@
 
         <div class="col-lg-4">
           <div class="well">
-            <img src="/images/avatar.jpg" class="avatar" width="125px">
+            <img src="/images/avatar.jpg" class="avatar" width="125px" height="125px">
             <h4><i class="fa fa-info-circle fa-lg fa-fw"></i> About Lucas</h4>
             <p class="blurb">An account of Lucas' epic travels, exciting
             adventures, challenging misfortunes and lucky breaks. They rarely
