Quit using a webfont for main text
Im kidding myself to think I can notice/care about the difference and
it's a bunch of extra requests for the fonts.

--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -2,7 +2,7 @@
 $tag-color:            white;
 $tag-background-color: #1c1e22;
 $photo-padding: 6px;
-$normal-font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$normal-font-family: Helvetica, 'Helvetica Neue', Arial, sans-serif;
 $light-font-weight:  100;
 $normal-font-weight: 300;
 $bold-font-weight:   700;
