--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -27,31 +27,31 @@ footer {
   margin: 50px 0;
 }
 
-.flickr-image {
+.flickr-image-container {
   text-align: center;
 
-  // centered Polaroid-like look
-  padding: $photo-padding;
-  background: white;
-  display: table;
-  margin-right: auto;
-  margin-left: auto;
-  box-shadow:         $photo-padding $photo-padding $photo-padding 0px #111;
-  border-radius: 3px;
+  .polaroid {
+    // centered Polaroid-like look
+    display: inline-block;
+    padding: $photo-padding;
+    background: white;
+    box-shadow:         $photo-padding $photo-padding $photo-padding 0px #111;
+    border-radius: 3px;
 
-  a img {
-    display: inline;
-    margin-bottom: $photo-padding;
-    border-radius: 2px;
-  }
+    a img {
+      margin-bottom: $photo-padding;
+      border-radius: 2px;
+      width: 100%
+    }
 
-  em {
-    color: black;
-    font-family: 'Swanky and Moo Moo', fantasy, cursive;
-    font-size: 24px;
-  }
-  a:hover {
-    text-decoration: none;
+    em {
+      color: black;
+      font-family: 'Swanky and Moo Moo', fantasy, cursive;
+      font-size: 24px;
+    }
+    a:hover {
+      text-decoration: none;
+    }
   }
 
 }
