--- a/source/_includes/_post_excerpt.html
+++ b/source/_includes/_post_excerpt.html
@@ -2,9 +2,13 @@
   <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
   <p class="timestamp"><i class="fa fa-clock-o"></i>&nbsp;Posted on {{ post.date | date_to_long_string }}</p>
   <br>
-  {{ content | excerpt | rewrite_flickr_urls: post.url}}
+  {% if post.excerpt %}
+  {{ post.excerpt | rewrite_flickr_urls: post.url}}
+  {% else %}
+  {{ post.content | rewrite_flickr_urls: post.url}}
+  {% endif %}
 
-  {% capture excerpted %}{{ content | has_excerpt }}{% endcapture %}
+  {% capture excerpted %}{{ post.content | has_excerpt }}{% endcapture %}
   <p class="excerpt-link"><a href="{{ post.url }}">{% if excerpted == 'true' %}Read more&hellip;{% else %}Leave a comment{% endif %}</a></p>
 
 <footer class="post_footer">
