Fix polaroid label for narrow photos

--- a/source/_sass/_style.scss
+++ b/source/_sass/_style.scss
@@ -48,6 +48,7 @@ footer {
       color: black;
       font-family: 'Swanky and Moo Moo', fantasy, cursive;
       font-size: 24px;
+      display: block;
     }
     a:hover {
       text-decoration: none;
