Getting worse at keeping up :(

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -72,7 +72,7 @@
             happen with to any real plan, but generally these kinds of things
             just take care of themselves and I just enjoy the ride.</p>
 
-            <p class="blurb">I try to post something to this blog at least once a month (I'm trying to get better), and it tends to run several months behind real-time.</p>
+            <p class="blurb">I try to post something to this blog at least once a month (I'm trying to get better), and it tends to run many months behind real-time.</p>
           </div>
 
           <div class="well">
