--- a/source/_sass/_style.scss
+++ b/source/_sass/_style.scss
@@ -38,7 +38,7 @@ footer {
     box-shadow:         $photo-padding $photo-padding $photo-padding 0px #111;
     border-radius: 3px;
 
-    a img {
+    img {
       margin-bottom: $photo-padding;
       border-radius: 2px;
       width: 100%
