--- a/source/_sass/_style.scss
+++ b/source/_sass/_style.scss
@@ -27,6 +27,14 @@ footer {
   margin: 50px 0;
 }
 
+.latest {
+  font-size: 13px;
+  .continue-link {
+    text-align: right;
+  }
+}
+
+
 .flickr-image-container {
   text-align: center;
 
