--- a/source/_sass/_style.scss
+++ b/source/_sass/_style.scss
@@ -23,10 +23,6 @@ nav, .navbar-brand {
   font-size: 18px;
 }
 
-footer {
-  margin: 50px 0;
-}
-
 .latest {
   font-size: 13px;
   .continue-link {
@@ -224,7 +220,7 @@ article p {
 }
 
 .timestamp {
-  margin: -5px 0 0 0;
+  margin: -5px 0 -5px 0;
   padding: 0px;
   font-size: 10px;
 }
