--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -75,6 +75,19 @@
           </div>
           {% endif %}
 
+          <div class="well ad">
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- Lucas The Nomad - Well Ad -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-7096969525461213"
+                 data-ad-slot="3060324888"
+                 data-ad-format="auto"></ins>
+            <script>
+              (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+          </div>
+
           <div class="well">
             <img src="/images/avatar.jpg" class="avatar" width="125px" height="125px">
             <h4><i class="fa fa-info-circle fa-lg fa-fw"></i> About Lucas</h4>
