try moving ad - not working

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -59,6 +59,16 @@
 
       <div class="row">
         <div class="col-lg-8">
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- Lucas The Nomad - Well Ad -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-7096969525461213"
+                 data-ad-slot="3060324888"
+                 data-ad-format="auto"></ins>
+            <script>
+              (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
 
           {{ content }}
 
@@ -75,18 +85,8 @@
           </div>
           {% endif %}
 
-          <div class="well ad">
-            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-            <!-- Lucas The Nomad - Well Ad -->
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-7096969525461213"
-                 data-ad-slot="3060324888"
-                 data-ad-format="auto"></ins>
-            <script>
-              (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-          </div>
+          <!-- <div class="well ad"> -->
+          <!-- </div> -->
 
           <div class="well">
             <img src="/images/avatar.jpg" class="avatar" width="125px" height="125px">
