--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -85,8 +85,14 @@
           </div>
           {% endif %}
 
-          <!-- <div class="well ad"> -->
-          <!-- </div> -->
+          <div class="well ad">
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- attempt 2 -->
+            <ins class="adsbygoogle" style="display:inline-block;width:300px;height:250px" data-ad-client="ca-pub-7096969525461213" data-ad-slot="4271202888"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+          </div>
 
           <div class="well">
             <img src="/images/avatar.jpg" class="avatar" width="125px" height="125px">
