--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -59,6 +59,7 @@
 
       <div class="row">
         <div class="col-lg-8">
+          <div class="ad">
             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
             <!-- Lucas The Nomad - Well Ad -->
             <ins class="adsbygoogle"
@@ -69,6 +70,7 @@
             <script>
               (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
+            </div>
 
           {{ content }}
 
